fix docs to handle spacing

--- a/docs/src/app/pages/components/Buttons/style.scss
+++ b/docs/src/app/pages/components/Buttons/style.scss
@@ -14,6 +14,9 @@
 }
 
 .custom-confirmation-wrapper {
-  display: flex;
-  justify-content: space-between;
+  display: inline-flex;
+
+  > div {
+    margin-right: 16px;
+  }
 }
